Use JDK11
Signed-off-by: anierbeck <bcanhome@googlemail.com>